--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
     <style name="Theme.MitWeather" parent="Base.Theme.MitWeather" />
 
     <!--    search view theme-->
-    <style name="AppSearchView" parent="Widget.AppCompat.SearchView">
+    <style name="AppSearchView" parent="CardView">
         <item name="android:textSize">15sp</item>
         <item name="android:editTextColor">@android:color/white</item>
         <item name="android:textColorHint">@android:color/white</item>
