--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -26,5 +26,11 @@
     <fragment
         android:id="@+id/detailWeatherScreen"
         android:name="com.example.mitweather.ui.detailWeatherScreen.DetailWeatherScreen"
-        android:label="DetailWeatherScreen" />
+        android:label="DetailWeatherScreen" >
+        <action
+            android:id="@+id/action_detailWeatherScreen_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/detailWeatherScreen"/>
+    </fragment>
 </navigation>
